--- a/Conveyor.csproj
+++ b/Conveyor.csproj
@@ -33,6 +33,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="Request.cs" />
+    <Compile Include="Response.cs" />
+    <Compile Include="ListenerThread.cs" />
+    <Compile Include="HandlerThread.cs" />
+    <Compile Include="HttpResponseMessage.cs" />
+    <Compile Include="LiterateSocket.cs" />
+    <Compile Include="Server.cs" />
+    <Compile Include="NDeproxy\StringHelper.cs" />
+    <Compile Include="NDeproxy\SocketHelper.cs" />
+    <Compile Include="NDeproxy\Header.cs" />
+    <Compile Include="NDeproxy\HeaderCollection.cs" />
+    <Compile Include="RequestHandler.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="NDeproxy\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="NOTICE" />
+    <None Include="LICENSE" />
+    <None Include="README.md" />
+  </ItemGroup>
 </Project>
